# dips-scraping

./: .gitignore  README.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: main.yaml
cozycozy/: cozycozy_scraper.py
