[tool.poetry]
name = "dips-scraping"
version = "0.1.0"
description = ""
authors = ["Niccolo Salvini <47143429+NiccoloSalvini@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
selenium = "^4.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
