[tool.poetry]
name = "dips-scraping"
version = "0.1.0"
description = ""
authors = ["Niccolo Salvini <47143429+NiccoloSalvini@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
selenium = "^4.19.0"
monsterapi = "^1.0.8"
alembic = "^1.13.1"
fastapi = "^0.110.2"
pydantic = "^2.7.0"
SQLAlchemy = "^2.0.29"
psycopg = "^3.1.18"
pytest = "^8.1.1"
gunicorn = "^22.0.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
